--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+                        <plugin>
+                                <groupId>org.jacoco</groupId>
+                                <artifactId>jacoco-maven-plugin</artifactId>
+                                <version>0.8.5-SNAPSHOT</version>
+                        </plugin>			
+			
 		</plugins>
 	</build>
 
