--- a/pom.xml
+++ b/pom.xml
@@ -125,14 +125,7 @@
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
 		</repository>
-		
-                <repository>
-                        <id>oss-sonatype</id>
-                        <name>oss-sonatype</name>
-                        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-                </repository>	
-		
-		
+				
 		<repository>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots</name>
@@ -156,6 +149,17 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</pluginRepository>
+		
+		<pluginRepository>
+                        <id>oss-sonatype</id>
+                        <name>oss-sonatype</name>
+                        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                        <snapshots>
+                              <updatePolicy>daily</updatePolicy>
+                              <enabled>true</enabled>
+                        </snapshots>
+		</pluginRepository>	
+		
 	</pluginRepositories>
 
 </project>
